--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
-  "keywords": [],
   "dependencies": {
-    "sails": "^1.0.2",
+    "@sailshq/connect-redis": "^3.2.1",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^5.2.0",
+    "ajv": "^6.0.0",
+    "async": "2.0.1",
+    "aws-sdk": "^2.343.0",
+    "body-parser": "^1.18.2",
+    "chart.js": "^2.7.3",
+    "chartjs-node": "^1.6.0",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "grunt": "1.0.1",
+    "hash-generator": "^0.1.0",
+    "jimp": "^0.5.6",
+    "merge-img": "^2.1.2",
+    "path": "^0.12.7",
+    "sails": "^1.0.2",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
-    "@sailshq/connect-redis": "^3.2.1",
-    "@sailshq/socket.io-redis": "^5.2.0",
-    "@sailshq/lodash": "^3.10.3",
-    "async": "2.0.1"
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
-  },
-  "scripts": {
-    "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
-    "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
-    "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
   },
   "main": "app.js",
   "repository": {
@@ -30,7 +35,7 @@
     "url": "git://github.com/mzonenac/graph-hel.git"
   },
   "author": "mzonenac",
-  "license": "",
+  "license": "MIT",
   "engines": {
     "node": ">=11.0"
   }
