--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "ajv": "^6.0.0",
     "async": "2.0.1",
     "aws-sdk": "^2.343.0",
-    "body-parser": "^1.18.2",
-    "chart.js": "^2.7.3",
-    "chartjs-node": "^1.6.0",
+    "body-parser": "1.18.2",
+    "chart.js": "2.7.3",
+    "chartjs-node": "1.6.0",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "grunt": "1.0.1",
-    "hash-generator": "^0.1.0",
-    "jimp": "^0.5.6",
-    "merge-img": "^2.1.2",
-    "path": "^0.12.7",
+    "hash-generator": "0.1.0",
+    "jimp": "0.5.3",
+    "path": "0.12.7",
     "sails": "^1.0.2",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
